--- a/plugin.yml
+++ b/plugin.yml
@@ -1,5 +1,6 @@
-main: com.icanstudios.NewSignShop.Main
+main: com.icanstudios.newsignshop.Main
 name: NewSignShop
 version: 1.0
 author: me
-api-version: 1.14
+api-version: 1.16
+depend: [Vault]
